--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="pclogo.JPG">
+    <link rel="icon" type="image/png" href="templates/backgroundimages/pclogo1.JPG">
     <title>PC Hotels Chatbot</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         @keyframes backgroundAnimation {
-            0% { background-image: url('backgroundimages/image1.jpg'); }
-            33% { background-image: url('backgroundimages/image2.jpg'); }
-            66% { background-image: url('backgroundimages/image3.jpg'); }
-            100% { background-image: url('backgroundimages/image1.jpg'); }
+            0% { background-image: url('templates/backgroundimages/image1.jpg'); }
+            33% { background-image: url('templates/backgroundimages/image2.jpg'); }
+            66% { background-image: url('templates/backgroundimages/image3.jpg'); }
+            100% { background-image: url('templates/backgroundimages/image1.jpg'); }
         }
         #messages {
             flex: 1;
@@ -226,7 +226,7 @@
 <body>
     <!-- Header -->
     <div id="header">
-        <img src="pclogo1.JPG" alt="Logo" style="max-width: 180px; margin-right: 10px;">
+        <img src="templates/backgroundimages/pclogo1.JPG" alt="Logo" style="max-width: 180px; margin-right: 10px;">
         <div id="title">PC HOTELS CHATBOT</div>
     </div>
 
@@ -257,7 +257,7 @@
 
     <!-- Footer -->
     <div id="footer">
-        Autor de la página: Paula de Dios Oliver | Propiedad: PC Hoteles
+        Page Author: Paula de Dios Oliver | Property of: PC Hotels
     </div>
     <script>
         const messagesDiv = document.getElementById('messages');
